# codejudge

./: .gitignore  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
examples/is_anagram/: task.yaml
examples/is_anagram/candidates/: buggy_length_only.py  optimal_counter.py  sorted_compare.py
examples/two_sum/: task.yaml
examples/two_sum/candidates/: brute_force.py  buggy_offbyone.py  crashes_indexerror.py  optimal_hashmap.py
src/codejudge/: __init__.py  __main__.py  _worker.py  cli.py  evaluator.py  loader.py  models.py  ranker.py  report.py  runner.py  scorer.py
tests/: test_cli.py  test_end_to_end.py  test_loader.py  test_ranker.py  test_runner.py  test_scorer.py
